--- a/todolist/templates/todolist/index.html
+++ b/todolist/templates/todolist/index.html
@@ -71,7 +71,7 @@
 			<footer>
 				<div class="row pad">
 					<div class="col-lg-12 text-center">
-						Copyright &copy; Bluelime Learning Solutions 2018
+						Copyright &copy; shankar copyright issues @ 2021
 					</div>
 				</div>
 			</footer>
